  01 Sep 2016; Manuel Friedli <manuel@fritteli.ch>
  gitlab-workhorse-0.7.10.ebuild, gitlab-workhorse-0.7.11.ebuild,
  gitlab-workhorse-0.7.8.ebuild:
  dev-vcs/gitlab-workhorse:  updated to EAPI="6"

*gitlab-workhorse-0.7.11 (29 Aug 2016)

  29 Aug 2016; Manuel Friedli <manuel@fritteli.ch>
  +files/fix-Makefile-0.7.11.patch, +gitlab-workhorse-0.7.11.ebuild:
  dev-vcs/gitlab-workhorse:  added ebuild for gitlab-workhorse-0.7.11

*gitlab-workhorse-0.7.10 (22 Aug 2016)

  22 Aug 2016; Manuel Friedli <manuel@fritteli.ch>
  +files/fix-Makefile-0.7.10.patch, +gitlab-workhorse-0.7.10.ebuild:
  dev-vcs/gitlab-workhorse:  added ebuild for gitlab-workhorse-0.7.10. this is a
  dependeny of gitlab-ce-9999

  22 Aug 2016; Manuel Friedli <manuel@fritteli.ch>
  -files/fix-Makefile-0.7.7.patch, -gitlab-workhorse-0.7.7.ebuild:
  dev-vcs/gitlab-workhorse:  purged all versions <gitlab-workhorse-0.7.8

  26 Jul 2016; Manuel Friedli <manuel@fritteli.ch>
  -files/fix-Makefile-0.7.1.patch, -files/fix-Makefile-0.7.6.patch,
  -gitlab-workhorse-0.7.1.ebuild, -gitlab-workhorse-0.7.6.ebuild:
  dev-vcs/gitlab-workhorse:  removed all versions <0.7.7, as all available
  ebuilds of gitlab-ce require >=gitlab-workhorse-0.7.7

*gitlab-workhorse-0.7.8 (11 Jul 2016)

  11 Jul 2016; Manuel Friedli <manuel@fritteli.ch>
  +files/fix-Makefile-0.7.8.patch, +gitlab-workhorse-0.7.8.ebuild:
  dev-vcs/gitlab-workhorse:  added ebuild for version 0.7.8

*gitlab-workhorse-0.7.7 (28 Jun 2016)

  28 Jun 2016; Manuel Friedli <manuel@fritteli.ch>
  +files/fix-Makefile-0.7.7.patch, +gitlab-workhorse-0.7.7.ebuild:
  dev-vcs/gitlab-workhorse:  Added version 0.7.7, just a minor update

  26 Jun 2016; Manuel Friedli <manuel@fritteli.ch>
  -files/fix-Makefile-0.7.4.patch, -gitlab-workhorse-0.7.4.ebuild:
  dev-vcs/gitlab-workhorse:  Purged unneded version 0.7.4 of dev-vcs/gitlab-
  workhorse

*gitlab-workhorse-0.7.6 (18 Jun 2016)

  18 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-workhorse-0.7.6.ebuild: