@@ -1,3 +1,8 @@
+  05 Sep 2016; Manuel Friedli <manuel@fritteli.ch>
+  gitlab-workhorse-0.7.10.ebuild, gitlab-workhorse-0.7.11.ebuild,
+  gitlab-workhorse-0.7.8.ebuild:
+  dev-vcs/gitlab-workhorse:  fixed ebuilds for gitlab-workhorse for EAPI="6"
+
   01 Sep 2016; Manuel Friedli <manuel@fritteli.ch>
   gitlab-workhorse-0.7.10.ebuild, gitlab-workhorse-0.7.11.ebuild,
   gitlab-workhorse-0.7.8.ebuild:
